--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "chai": "^3.5.0",
     "d3": "^4.5.0",
     "express": "^4.14.1",
+    "express-handlebars": "^3.0.0",
     "express-method-override": "0.0.3",
+    "handlebars": "^4.0.6",
     "method-override": "^2.3.7",
     "mocha": "^3.2.0"
   }
